Fix language menu popover z-index

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -790,7 +790,7 @@ body.search-open {
   min-width: 121px;
   background: #fff;
   box-shadow: 0 5px 25px rgba(0, 0, 0, 0.3);
-  z-index: 1;
+  z-index: 20;
 }
 
 .menu-lang {
