--- a/stylesheets/scss/_menus.scss
+++ b/stylesheets/scss/_menus.scss
@@ -287,7 +287,7 @@
     min-width: 121px;
     background: #fff;
     box-shadow: 0 5px 25px rgba($primary-color, 0.3);
-    z-index: 1;
+    z-index: 20;
   }
 }
 
